# TurboModuleTestingMatrix

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  versions.json
.github/workflows/: pr.yml
CMake/: AddTest.cmake  IncludeGoogleTest.cmake  IncludeTurboModuleTesting.cmake
RTNTestableModule/: CMakeLists.txt  RTNTestableModule.podspec  package.json  react-native.config.js
RTNTestableModule/android/: CMakeLists.txt  build.gradle
RTNTestableModule/android/src/main/: AndroidManifest.xml
RTNTestableModule/android/src/main/java/com/rtntestablemodule/: RTNTestableModuleCxxPackage.kt  RTNTestableModulePackage.kt
RTNTestableModule/android/src/main/jni/: OnLoad.cpp  RTNTestableModuleCxxPackage.cpp  RTNTestableModuleCxxPackage.h
RTNTestableModule/cpp/: CMakeLists.txt  RTNTestableModule.cpp  RTNTestableModule.h
RTNTestableModule/ios/: NativeRTNTestableModuleProvider.mm
RTNTestableModule/src/: NativeRTNTestableModule.ts  index.ts
RTNTestableModule/tests/: CMakeLists.txt  RTNTestableModule_Tests.cpp
apps/0.80.3/HostApp/: metro.config.js  package-lock.json  package.json
apps/0.80.3/HostApp/ios/HostApp.xcodeproj/: project.pbxproj
apps/0.81.5/HostApp/: package-lock.json  package.json
apps/0.81.5/HostApp/ios/HostApp.xcodeproj/: project.pbxproj
apps/0.82.1/HostApp/: package-lock.json  package.json
apps/0.82.1/HostApp/ios/HostApp/: Info.plist
apps/0.82.1/HostApp/ios/HostApp.xcodeproj/: project.pbxproj
apps/0.83.1/HostApp/: App.tsx  package-lock.json  package.json
apps/0.83.1/HostApp/ios/HostApp.xcodeproj/: project.pbxproj
apps/0.84.1/HostApp/: package-lock.json  package.json
apps/0.84.1/HostApp/android/app/: build.gradle
apps/0.84.1/HostApp/ios/HostApp/: Info.plist
apps/0.84.1/HostApp/ios/HostApp.xcodeproj/: project.pbxproj
apps/0.85.3/HostApp/: package-lock.json  package.json
apps/0.85.3/HostApp/ios/HostApp.xcodeproj/: project.pbxproj
apps/0.86.0/HostApp/: package-lock.json  package.json
apps/0.86.0/HostApp/ios/: Podfile
apps/0.86.0/HostApp/ios/HostApp.xcodeproj/: project.pbxproj
docs/: ADDING_VERSIONS.md
overlays/_shared/: package.json.patch.json
scripts/: generate.sh  run-from.sh  run-matrix.sh
scripts/lib/: apply-overlay.sh  common.sh  report.sh  versions.sh
